crates/reinhardt-core/macros/tests/ui/routes_registration/fail/no_return_type.rs
use reinhardt_macros::routes;

#[routes]
pub fn routes() {
    // Missing return type
}

fn main() {}
